@@ -48,6 +48,13 @@
       <artifactId>guava</artifactId>
       <optional>true</optional>
     </dependency>
+
+    <dependency>
+      <groupId>com.carrotsearch.randomizedtesting</groupId>
+      <artifactId>randomizedtesting-runner</artifactId>
+      <version>2.0.10</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 
